Learnt how to make connections using sqlite3

--- a/main.ipynb
+++ b/main.ipynb
@@ -17,6 +17,138 @@
     "import sqlite3\n",
     "new_connection = sqlite3.connect(\"data_testing.db\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sqlite3.Connection"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(new_connection)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To make cursor in sqlite 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_cursor = new_connection.cursor()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To get the current date time from sqlite 3 library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('2023-01-24 22:01:11',)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_sql = \"SELECT datetime('now', 'localtime');\"\n",
+    "new_cursor.execute(new_sql)\n",
+    "\n",
+    "new_cursor.fetchone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-01-24 22:01:30\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_dtime = new_cursor.execute(new_sql).fetchone()[0]\n",
+    "print(new_dtime)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# To close the connection we use"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_connection.close()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Best way to manage connections in sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-01-24 22:06:03\n"
+     ]
+    }
+   ],
+   "source": [
+    "with sqlite3.connect(\"data_testing.db\") as new_connection:\n",
+    "    new_cursor = new_connection.cursor()\n",
+    "    new_sql = \"SELECT datetime('now', 'localtime');\"\n",
+    "    new_dtime = new_cursor.execute(new_sql).fetchone()[0]\n",
+    "    print(new_dtime)"
+   ]
   }
  ],
  "metadata": {
